Landing Page/LandingPage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-p
spec:
  replicas: 2
  selector:
    matchLabels:
      name: landing-p
  template:
    metadata:
      labels:
        name: landing-p
    spec:
      containers:
      - name: landing-p
        image: raxer/landing
---
apiVersion: v1
kind: Service
metadata:
  name: landing-p
spec:
  type: NodePort
  ports:
    - targetPort: 81
      port: 81
      nodePort: 30080
  selector:
    name: landing-p
