Landing Page/LandingPage-ingress (SSL).yml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-p
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      name: landing-p
  template:
    metadata:
      labels:
        name: landing-p
    spec:
      containers:
      - name: landing-p
        image: raxer/landing
---
apiVersion: v1
kind: Service
metadata:
  name: landing-p
  namespace: production
spec:
  #type: LoadBalancer
  ports:
    - port: 81
      #nodePort: 30080
  selector:
    name: landing-p
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-p-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "landing-prod"
spec:
  rules:
  - host: landing.rafifauz.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: landing-p
          servicePort: 81
  
  tls:
  - hosts:
    - landing.rafifauz.site
    secretName: landing-tls
