Landing Page/LandingPage-with-Ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-p
spec:
  replicas: 2
  selector:
    matchLabels:
      name: landing-p
  template:
    metadata:
      labels:
        name: landing-p
    spec:
      containers:
      - name: landing-p
        image: raxer/landing
---
apiVersion: v1
kind: Service
metadata:
  name: landing-p
spec:
  #type: LoadBalancer
  ports:
    - port: 81
      #nodePort: 30080
  selector:
    name: landing-p
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-p-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: landing.rafifauz.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: landing-p
          servicePort: 81
